# swiftcountdown

./: swiftcountdown.code-workspace
host/: Package.resolved  Package.swift  host
host/Sources/: main.swift
micro/: CMakeLists.txt  main.c  segment.c  slave_mem_i2c.c
micro/SwiftLib/: SwiftLib.swift
